BUGF-4023/4024/4025 Fixes date range picker button not showing on smaller resolution

--- a/src/containers/PerfectStock/SalesProjection/SalesProjectionMeta/index.module.scss
+++ b/src/containers/PerfectStock/SalesProjection/SalesProjectionMeta/index.module.scss
@@ -102,6 +102,10 @@
   align-items: center;
 
   .dateRangePicker {
+    .rs-picker-menu {
+      top: 20% !important;
+    }
+
     a {
       span {
         color: $black_1 !important;
